# upquack

./: Cargo.toml  README.md
db/: domains.json
src/: app.rs  main.rs  monitor.rs  utils.rs
src/ui/: actions.rs  analytics.rs  domain_table.rs  domains.rs  history_screen.rs  history_table.rs  mod.rs  popup.rs
