[package]
name = "upquack"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-textarea = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
url = "2.5.4"
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
env_logger = "0.11.8"

[dependencies.reqwest]
version = "0.12.20"
default-features = false
features = ["json", "rustls-tls"]
